--- a/ScheduleModule/Views/MultiAssigns/MultiAssignRecordTypeView.xaml
+++ b/ScheduleModule/Views/MultiAssigns/MultiAssignRecordTypeView.xaml
@@ -14,11 +14,26 @@
                     <ColumnDefinition Width="301"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical">
-                    <TextBlock Text="{Binding Path=RecordTypeName}" FontWeight="Bold"/>
-                    <Button Command="{Binding AddRoomFilter}" Content="{Binding SelectedRoomName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" Width="auto"/>
-                    <Button Command="{Binding AddDoctorFilter}" Content="{Binding SelectedDoctorName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" Width="auto"/>
-                </StackPanel>
+                <Grid Grid.Row="0" Grid.Column="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="auto"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <Button Grid.Row="0" Grid.Column="2" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Right" Width="auto" ToolTip="Убрать услугу"
+                            Command="{Binding Path=DataContext.DeleteRecordTypeCommand, ElementName=SelectedRecordTypesContainer}" CommandParameter="{Binding Path=.}">
+                        <Image Source="pack://application:,,,/Core;Component/Resources/Images/Trash-icon16x16.png" Height="20" Width="20"/>
+                    </Button>
+                    <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding Path=RecordTypeName}" FontWeight="Bold"/>
+                    <Button  Grid.Row="2" Grid.Column="0" Command="{Binding AddRoomFilter}" Content="{Binding SelectedRoomName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" HorizontalAlignment="Left" Width="auto"/>
+                    <Button  Grid.Row="3" Grid.Column="0" Command="{Binding AddDoctorFilter}" Content="{Binding SelectedDoctorName}" BorderThickness="0" Background="Transparent" HorizontalContentAlignment="Left" Foreground="#FF1E09F0" HorizontalAlignment="Left" Width="auto"/>
+                </Grid>
                 <StackPanel  Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
                     <ItemsControl ItemsSource="{Binding Dates}"
                                       VerticalContentAlignment="Stretch">
@@ -39,7 +54,7 @@
                                             </ItemsControl.ItemsPanel>
                                             <ItemsControl.ItemTemplate>
                                                 <DataTemplate>
-                                                    <ToggleButton Width="auto" Background="Transparent" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}}, 
+                                                    <ToggleButton Width="auto" Background="Transparent" BorderBrush="Green" Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Grid}}, 
                                                     Path=DataContext.AddSelectedTimeCommand}" CommandParameter="{Binding Path=.}">
                                                         <TextBlock>
                                                             <TextBlock.Text>
