--- a/PatientRecordsModule/Views/VisitEditorView.xaml
+++ b/PatientRecordsModule/Views/VisitEditorView.xaml
@@ -1,85 +1,81 @@
-﻿<UserControl x:Class="Shared.PatientRecords.Views.VisitEditorView"
+﻿<ResourceDictionary x:Class="Shared.PatientRecords.Views.VisitEditorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
-             xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
+             xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit">
+    <DataTemplate DataType="{x:Type viewModels:VisitEditorViewModel}">
+        <DataTemplate.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="pack://application:,,,/Core.Wpf;Component/Themes/Generic.xaml" />
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </DataTemplate.Resources>
         <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="auto"/>
+                </Grid.RowDefinitions>
 
-            <TextBlock Grid.Row="0" Grid.Column="0" Text="Дата/время начала случая:"/>
-            <extToolkit:DateTimePicker Grid.Row="0" Grid.Column="1" Margin="3,1,1,1" HorizontalAlignment="Left" Width="165" Value="{Binding Date}" Format="Custom" FormatString="dd MMMM yyyy HH:mm"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Дата/время начала случая:"/>
+                <extToolkit:DateTimePicker Grid.Row="0" Grid.Column="1" Margin="3,1,1,1" HorizontalAlignment="Left" Width="165" Value="{Binding Date}" Format="Custom" FormatString="dd MMMM yyyy HH:mm"/>
 
-            <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
-            <ComboBox Grid.Row="1" Grid.Column="1"  Margin="3,1,20,1" ItemsSource="{Binding VisitTemplates}" 
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Шаблон случая:"/>
+                <ComboBox Grid.Row="1" Grid.Column="1"  Margin="3,1,20,1" ItemsSource="{Binding VisitTemplates}" 
                       SelectedValue="{Binding SelectedVisitTemplateId, ValidatesOnDataErrors=True}" 
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
                       SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
-            <TextBlock Grid.Row="2" Grid.Column="0" Text="Место выполнения:"/>
-            <ComboBox Grid.Row="2" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding ExecutionPlaces}" 
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Место выполнения:"/>
+                <ComboBox Grid.Row="2" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding ExecutionPlaces}" 
                       SelectedValue="{Binding SelectedExecutionPlaceId, ValidatesOnDataErrors=True}" 
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding ExecutionPlaceEnabled}"/>
 
-            <TextBlock Grid.Row="3" Grid.Column="0" Text="Договор:"/>
-            <ComboBox Grid.Row="3" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Contracts}" SelectedValue="{Binding SelectedContractId, ValidatesOnDataErrors=True}"
+                <TextBlock Grid.Row="3" Grid.Column="0" Text="Договор:"/>
+                <ComboBox Grid.Row="3" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Contracts}" SelectedValue="{Binding SelectedContractId, ValidatesOnDataErrors=True}"
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name" 
                       IsEnabled="{Binding ContractEnabled}"/>
 
-            <TextBlock Grid.Row="4" Grid.Column="0" Text="Источник финансирования:"/>
-            <ComboBox Grid.Row="4" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding FinancingSources}" 
+                <TextBlock Grid.Row="4" Grid.Column="0" Text="Источник финансирования:"/>
+                <ComboBox Grid.Row="4" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding FinancingSources}" 
                       SelectedValue="{Binding SelectedFinancingSourceId, ValidatesOnDataErrors=True}" 
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" 
                       SelectedValuePath="Id" DisplayMemberPath="Name" IsEnabled="{Binding FinancingSourceEnabled}"/>
 
-            <TextBlock Grid.Row="5" Grid.Column="0" Text="Срочность:"/>
-            <ComboBox Grid.Row="5" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Urgentlies}" SelectedValue="{Binding SelectedUrgentlyId, ValidatesOnDataErrors=True}" 
+                <TextBlock Grid.Row="5" Grid.Column="0" Text="Срочность:"/>
+                <ComboBox Grid.Row="5" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding Urgentlies}" SelectedValue="{Binding SelectedUrgentlyId, ValidatesOnDataErrors=True}" 
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name" 
                       IsEnabled="{Binding UrgentlyEnabled}"/>
 
-            <TextBlock Grid.Row="6" Grid.Column="0" Text="Направившее ЛПУ:"/>
-            <ComboBox Grid.Row="6" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding LPUs}" SelectedValue="{Binding SelectedLPUId, ValidatesOnDataErrors=True}" 
+                <TextBlock Grid.Row="6" Grid.Column="0" Text="Направившее ЛПУ:"/>
+                <ComboBox Grid.Row="6" Grid.Column="1" Margin="3,1,20,1" ItemsSource="{Binding LPUs}" SelectedValue="{Binding SelectedLPUId, ValidatesOnDataErrors=True}" 
                       Validation.ErrorTemplate="{StaticResource ValidationTemplate}" SelectedValuePath="Id" DisplayMemberPath="Name"/>
 
-            <TextBlock Grid.Row="7" Grid.Column="0" Text="Примечание:"/>
-            <TextBox Grid.Row="7" Grid.Column="1" Height="48" Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap"/>
-
-            <StackPanel Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button Content="Сохранить" Margin="3" Command="{Binding CreateVisitCommand}"/>
-                <Button Content="Отмена" Margin="3" Command="{Binding CancelCommand}"/>
-            </StackPanel>
+                <TextBlock Grid.Row="7" Grid.Column="0" Text="Примечание:"/>
+                <TextBox Grid.Row="7" Grid.Column="1" Height="48" Text="{Binding Note, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap"/>
+               
+            </Grid>
+            <ContentControl Content="{Binding BusyMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
+            <ContentControl Content="{Binding FailureMediator}"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch" />
         </Grid>
-        <ContentControl Content="{Binding BusyMediator}"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" />
-        <ContentControl Content="{Binding FailureMediator}"
-                        HorizontalAlignment="Stretch"
-                        VerticalAlignment="Stretch" />
-    </Grid>
-</UserControl>
+    </DataTemplate>
+</ResourceDictionary>
