--- a/PolyclinicModule/Views/PolyclinicHeaderView.xaml
+++ b/PolyclinicModule/Views/PolyclinicHeaderView.xaml
@@ -1,16 +1,16 @@
-﻿<fluent:RibbonTabItem x:Class="Shared.PatientRecords.Views.PersonRecordsHeader"
+﻿<fluent:RibbonTabItem x:Class="PolyclinicModule.Views.PolyclinicHeaderView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fluent="urn:fluent-ribbon"
-                      xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels"
                       xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
+                      xmlns:viewModels="clr-namespace:PolyclinicModule.ViewModels"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
-                      d:DataContext="{d:DesignInstance viewModels:PersonRecordsHeaderViewModel}"
-                      Header="Случаи">
+                      d:DataContext="{d:DesignInstance viewModels:PolyclinicHeaderViewModel}" 
+                      Header="КДЦ">
     <fluent:RibbonGroupBox>
         <fluent:RibbonGroupBox.Template>
             <ControlTemplate>
@@ -18,5 +18,7 @@
             </ControlTemplate>
         </fluent:RibbonGroupBox.Template>
     </fluent:RibbonGroupBox>
-    
+
 </fluent:RibbonTabItem>
+    
+
