--- a/PolyclinicModule/Views/PersonList/PolyclinicPersonListView.xaml
+++ b/PolyclinicModule/Views/PersonList/PolyclinicPersonListView.xaml
@@ -75,12 +75,12 @@
         
         <DockPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Stretch">
             <DatePicker DockPanel.Dock="Top" SelectedDate="{Binding SelectedDate}" 
-                        Margin="0" 
+                        Margin="2" 
                         VerticalContentAlignment="Center" 
                         HorizontalContentAlignment="Stretch" 
                         HorizontalAlignment="Stretch"
                         Width="200" FontWeight="SemiBold"/>
-            <ComboBox DockPanel.Dock="Top" Margin="0 2" Width="200"
+            <ComboBox DockPanel.Dock="Top" Margin="2 0" Width="200"
                           ItemsSource="{Binding Rooms}" 
                           SelectedValue="{Binding SelectedRoomId, Mode=TwoWay}"
                           SelectedValuePath="Value" 
@@ -88,6 +88,7 @@
         </DockPanel>
 
         <DataGrid Grid.Column="0" Grid.Row="1" AutoGenerateColumns="False" CanUserAddRows="False" Background="White"
+                          Margin="2"
                           ItemsSource="{Binding Source, Mode=TwoWay}" 
                           SelectedItem="{Binding SelectedSource, Mode=TwoWay}"
                           SelectionMode="Extended"   
@@ -118,6 +119,6 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <ContentControl Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+        <ContentControl Grid.RowSpan="2" Content="{Binding BusyMediator}" HorizontalAlignment="Stretch" VerticalAlignment="Center" />
     </Grid>
 </UserControl>
