--- a/UserMessageModule/Views/MessageInboxView.xaml
+++ b/UserMessageModule/Views/MessageInboxView.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="UserMessagerModule.Views.MessagerInboxView"
+﻿<UserControl x:Class="UserMessageModule.Views.MessageInboxView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:viewModels ="clr-namespace:UserMessagerModule.ViewModels"
-             xmlns:view="clr-namespace:UserMessagerModule.Views"
+             xmlns:viewModels ="clr-namespace:UserMessageModule.ViewModels"
+             xmlns:view="clr-namespace:UserMessageModule.Views"
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance viewModels:MessagerInboxViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:MessageInboxViewModel}">
     <UserControl.Resources>
         <converters:ElementAtConverter x:Key="ElementAt" />
         <converters:BoolToCollapsedConverter x:Key="BoolToCollapsed" />
