--- a/UserMessageModule/Views/MessageHeaderView.xaml
+++ b/UserMessageModule/Views/MessageHeaderView.xaml
@@ -1,16 +1,16 @@
-﻿<fluent:RibbonTabItem x:Class="UserMessagerModule.Views.MessagerHeaderView"
+﻿<fluent:RibbonTabItem x:Class="UserMessageModule.Views.MessageHeaderView"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                       xmlns:fluent="urn:fluent-ribbon"
-                      xmlns:viewModels="clr-namespace:UserMessagerModule.ViewModels"
+                      xmlns:viewModels="clr-namespace:UserMessageModule.ViewModels"
                       xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
                       mc:Ignorable="d"
                       d:DesignHeight="300"
                       d:DesignWidth="300"
-                      d:DataContext="{d:DesignInstance viewModels:MessagerHeaderViewModel}" 
-                      Header="{Binding MessagerSelectorViewModel.HeaderText}">
+                      d:DataContext="{d:DesignInstance viewModels:MessageHeaderViewModel}" 
+                      Header="{Binding MessageSelectorViewModel.HeaderText}">
     <fluent:RibbonGroupBox Header="Сообщения">
         <fluent:Button Header="Обновить" SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/MailReceive.png"
@@ -18,19 +18,19 @@
         <fluent:Button Header="Отметить как прочитанное"
                        SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/MailRead.png" 
-                       Command="{Binding MessagerInboxViewModel.ReadMessageCommand}"/>
+                       Command="{Binding MessageInboxViewModel.ReadMessageCommand}"/>
         <fluent:Button Header="Открыть"
                        SizeDefinition="Large"
                        LargeIcon="pack://application:,,,/Core;Component/Resources/Images/MailTask.png" 
-                       Command="{Binding MessagerInboxViewModel.OpenMessageCommand}"/>
+                       Command="{Binding MessageInboxViewModel.OpenMessageCommand}"/>
     </fluent:RibbonGroupBox>
     <fluent:RibbonGroupBox Header="Параметры">
         <StackPanel>
             <fluent:CheckBox Header="Показывать прочитанные сообщения"
-                             IsChecked="{Binding MessagerInboxViewModel.ShowRead, Mode=TwoWay}"
-                             Command="{Binding MessagerInboxViewModel.RefreshAllCommand}"/>
+                             IsChecked="{Binding MessageInboxViewModel.ShowRead, Mode=TwoWay}"
+                             Command="{Binding MessageInboxViewModel.RefreshAllCommand}"/>
             <fluent:CheckBox Header="Отмечать открываемые сообщения как прочитанные"
-                             IsChecked="{Binding MessagerInboxViewModel.ReadOpened, Mode=TwoWay}"/>
+                             IsChecked="{Binding MessageInboxViewModel.ReadOpened, Mode=TwoWay}"/>
         </StackPanel>
     </fluent:RibbonGroupBox>
 </fluent:RibbonTabItem>
