--- a/UserMessageModule/Views/MessageSelectorView.xaml
+++ b/UserMessageModule/Views/MessageSelectorView.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="UserMessagerModule.Views.MessagerSelectorView"
+﻿<UserControl x:Class="UserMessageModule.Views.MessageSelectorView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:converters="clr-namespace:Core.Wpf.Converters;assembly=Core.Wpf"
-             xmlns:viewModels="clr-namespace:UserMessagerModule.ViewModels"
-             xmlns:views="clr-namespace:UserMessagerModule.Views"
+             xmlns:viewModels="clr-namespace:UserMessageModule.ViewModels"
+             xmlns:views="clr-namespace:UserMessageModule.Views"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="600"
-             d:DataContext="{d:DesignInstance viewModels:MessagerSelectorViewModel}">
+             d:DataContext="{d:DesignInstance viewModels:MessageSelectorViewModel}">
     <UserControl.Resources>
         <converters:ElementAtConverter x:Key="ElementAt" />
         <x:Array x:Key="ItemsMargins" Type="sys:String">
